--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,44 +1,48 @@
 <div class="main">
   <div class="text-center main__heading">
-    <h2 class="main__heading__title">Political Gaps</h2>
+    <h2 class="main__heading__title">
+      Political Gaps
+    </h2>
     <p class="main__heading__title__description">
       How representative are our representatives?
     </p>
+
+
+    <form class="main__heading__legislatures form-inline">
+      <label>
+        Diversity report for
+        <select class="form-control"
+                ng-options="legislature.id as legislature.display_name group by legislature.country.name for legislature in main.legislatures"
+                ng-model="main.legislature">
+        </select>
+      </label>
+    </form>
+    <br />
+    <ul class="nav nav-pills main__heading__tabs">
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="main({topic: 'gender'})" ui-sref-active="active">
+          Gender
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="main({topic: 'age_range'})" ui-sref-active="active">
+          Age
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="main({topic: 'profession_category'})" ui-sref-active="active">
+          Occupation
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="main({topic: 'political_leaning'})" ui-sref-active="active">
+          Political leaning
+        </a>
+      </li>
+    </ul>
+
   </div>
 
-  <form class="main__legislatures form-inline">
-    <label>
-      Diversity report for
-      <select class="form-control"
-              ng-options="legislature.id as legislature.display_name group by legislature.country for legislature in main.legislatures"
-              ng-model="main.legislature">
-      </select>
-    </label>
-  </form>
-
   <div class="main__chart main__chart--{{ main.topic }}" ui-view main-chart="main.summary" topic="main.topic"></div>
-
-  <ul class="nav nav-pills main__tabs">
-    <li class="nav-item">
-      <a class="nav-link" ui-sref="main({topic: 'gender'})" ui-sref-active="active">
-        Gender
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" ui-sref="main({topic: 'age_range'})" ui-sref-active="active">
-        Age
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" ui-sref="main({topic: 'profession_category'})" ui-sref-active="active">
-        Occupation
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" ui-sref="main({topic: 'political_leaning'})" ui-sref-active="active">
-        Political leaning
-      </a>
-    </li>
-  </ul>
 
 </div>
