--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,79 @@
 <div class="main">
+
+  <form class="main__elastic">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-4">
+          <div class="card">
+            <h4 class="card-heading main__elastic__title">
+              <button class="btn btn-link btn-sm pull-xs-right" ng-click="main.resetCountryAlpha2()" ng-if="main.hasCountryAlpha2()">
+                All
+              </button>
+              Country
+            </h4>
+            <ul class="list-unstyled main__elastic__list main__elastic__list--country">
+              <li ng-repeat="country in ::main.countries">
+                <button class="btn btn-primary btn-xs btn-block main__elastic__list__item"
+                        ng-click="main.toggleCountryAlpha2(country.alpha2)"
+                        ng-class="{
+                          'main__elastic__list__item--active': main.isCountryAlpha2(country.alpha2),
+                          'main__elastic__list__item--reduced': !main.matchCountryAlpha2(country.alpha2)
+                        }">
+                  {{ country.name }}
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="card">
+            <h4 class="card-heading main__elastic__title">
+              <button class="btn btn-link btn-sm pull-xs-right" ng-click="main.resetDifficultyLevel()" ng-if="main.hasDifficultyLevel()">
+                All
+              </button>
+              Administrative level
+            </h4>
+            <ul class="list-unstyled main__elastic__list main__elastic__list--administrative-level">
+              <li ng-repeat="difficultyLevel in ::main.difficultyLevels">
+                <button class="btn btn-primary btn-xs btn-block main__elastic__list__item"
+                        ng-click="main.toggleDifficultyLevel(difficultyLevel)"
+                        ng-class="{
+                          'main__elastic__list__item--active': main.isDifficultyLevel(difficultyLevel),
+                          'main__elastic__list__item--reduced': !main.matchDifficultyLevel(difficultyLevel)
+                        }">
+                  {{ difficultyLevel }}
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <div class="card">
+            <h4 class="card-heading main__elastic__title">
+              <button class="btn btn-link btn-sm pull-xs-right" ng-click="main.resetTerm()" ng-if="main.hasTerm()">
+                All
+              </button>
+              Term
+            </h4>
+            <ul class="list-unstyled main__elastic__list main__elastic__list--term">
+              <li ng-repeat="term in ::main.terms">
+                <button class="btn btn-primary btn-xs btn-block main__elastic__list__item"
+                        ng-click="main.toggleTerm(term)"
+                        ng-class="{
+                          'main__elastic__list__item--active': main.isTerm(term),
+                          'main__elastic__list__item--reduced': !main.matchTerm(term)
+                        }">
+                  {{ term }}
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
+<!--
   <div class="text-center main__heading">
     <h2 class="main__heading__title">
       Political Gaps
@@ -6,7 +81,6 @@
     <p class="main__heading__title__description">
       How representative are our representatives?
     </p>
-
 
     <form class="main__heading__legislatures form-inline">
       <label>
@@ -42,7 +116,7 @@
     </ul>
 
   </div>
-
   <div class="main__chart main__chart--{{ main.topic }}" ui-view main-chart="main.summary" topic="main.topic"></div>
+-->
 
 </div>
