--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <form class="main__elastic" ng-if="!('main.chart' | isState)">
+  <form class="main__elastic" ng-show="'main' | isState">
     <div class="main__elastic__introduction">
       <div class="container">
         <h1>
