Added color to intro

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -28,7 +28,7 @@
       color:white;
       padding:$spacer * 3 0;
       margin:0;
-      background: url('../assets/images/people-coffee-notes-tea-high-contrast-green.jpg') no-repeat center center;
+      background: url('../assets/images/people-coffee-notes-tea-high-contrast-green.jpg') no-repeat center center $brand-success;
       background-size: cover;
 
       a {
